# HelloUI

./: .gitignore  .npmrc  .prettierignore  FLUENT_UI_COMPONENTS.md  README.md  TODO.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  worker.html
StarArtStudio/: StarArtStudio.slnx
StarArtStudio/StarArtStudio/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  StarArtStudio.csproj  app.manifest
UI/: HomePage.pen
docs/: DEVELOPER.md  ELECTRON_PRELOAD_FIX.md
electron/: main.ts  preload.ts  worker.ts
electron/ipc/: dialog.ts  generate.ts  generatedImages.ts  modelDownload.ts  modelGroups.ts  perfectPixel.ts  sdcpp.ts  state.ts  system.ts  videoGenerate.ts  weights.ts
electron/types/: index.ts
electron/utils/: AsyncOperationGuard.test.ts  AsyncOperationGuard.ts  ResourceManager.test.ts  ResourceManager.ts  fileUtils.ts  fileWatcher.ts  hfDownloader.ts  paths.ts  sdcppDownloader.ts
shared/: ipc.ts  types.ts
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: dialog.rs  generate.rs  generated_images.rs  mod.rs  model_download.rs  model_groups.rs  perfect_pixel.rs  sdcpp.rs  system.rs  video_generate.rs  weights.rs
src-tauri/windows/: hooks.nsh
src/app/: routes.test.tsx  routes.tsx  theme.test.ts  theme.ts
src/components/: CliOutputPanel.tsx  MainLayout.css  MainLayout.test.tsx  MainLayout.tsx  (+5 more)
(+70 files in other folders)
