[package]
name = "helloui"
version = "2.0.3"
edition = "2021"
description = "HelloUI - AI Image & Video Generation"
rust-version = "1.77.2"

[lib]
name = "helloui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
zip = "2"
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
glob = "0.3"
futures = "0.3"
thiserror = "2"
urlencoding = "2"
dunce = "1.0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
